--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #1f1f1f;
-  color: white;
+  background-color: #1f1f1f !important;
+  color: white !important;
 }
 
 h1 {
@@ -18,9 +18,14 @@ h2 {
   font-weight: 700;
 }
 
+h4 {
+  font-size: 1.2rem !important;
+  font-weight: 700;
+}
+
 a {
-  text-decoration: none;
-  color: white;
+  text-decoration: none !important;
+  color: white !important;
 }
 
 ul {
@@ -37,14 +42,17 @@ ul {
 }
 
 .navbar {
-  padding: 2rem 5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  padding: 2rem 5rem !important;
+}
+
+.navbar-brand,
+.nav-link {
+  color: white !important;
 }
 
 .navbar ul {
   display: flex;
+  color: white !important;
 }
 
 .containerLogo {
@@ -64,6 +72,8 @@ p {
   flex-direction: column;
   align-items: center;
   margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
+  margin: 0 10%;
 
   /* display: flex;
   flex-direction: row;
@@ -73,7 +83,7 @@ p {
 
 .containerHeader p {
   /* width: 80%; */
-  width: 50%;
+  width: 70%;
 }
 
 .containerHeader button {
@@ -115,10 +125,11 @@ p {
   display: flex;
   justify-content: space-between;
   width: 90vw;
+  flex-wrap: wrap;
 }
 
 .product {
-  width: 25vw;
+  width: 300px;
   height: 18.75rem;
   position: relative;
   cursor: pointer;
@@ -132,7 +143,7 @@ p {
 }
 
 .product img:hover {
-  transform: scale(1.1);
+  transform: scale(1.02);
 }
 
 .containerImg .overlayImg {
@@ -149,10 +160,16 @@ p {
   opacity: 0.2;
 }
 
+.sectionMain h3 {
+  padding: 2% 0;
+}
+
 .sectionMain .contentSectionMain {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .sectionMain .contentSectionMain p {
@@ -161,6 +178,14 @@ p {
 }
 
 /* LEARN MORE */
+
+html {
+  font-size: 100%;
+}
+
+body {
+  font-size: 100%;
+}
 
 .sectionLearnMore {
   width: 100%;
@@ -212,4 +237,43 @@ ul :nth-child(2) {
 
 .sectionLearnMore .containerImg {
   margin: auto;
+}
+
+@media only screen and (max-width: 520px) {
+  body {
+    font-size: 70% !important;
+  }
+
+  h1 {
+    font-size: 4rem !important;
+  }
+
+  h2 {
+    font-size: 1.7rem !important;
+  }
+
+  h3 {
+    font-size: 1.3rem !important;
+  }
+
+  h4 {
+    font-size: 1rem !important;
+  }
+  .navbar {
+    background-color: #323131;
+    margin-bottom: 1rem;
+  }
+
+  .containerProducts {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product {
+    margin-bottom: 15%;
+  }
+
+  p {
+    width: 100% !important;
+  }
 }
