--- a/css/product.css
+++ b/css/product.css
@@ -6,11 +6,11 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
-  font-weight: 700;
+  font-size: 50px !important;
+  font-weight: 700 !important;
   margin-block-end: 0;
   margin-block-start: 0;
-  font-family: "Heebo", sans-serif;
+  font-family: "Ralleway", sans-serif;
 }
 
 h2 {
@@ -46,23 +46,11 @@ footer a {
 
 ul {
   /* margin-block-end: 0 !important;
-  margin-block-start: 0 !important; */
+    margin-block-start: 0 !important; */
   padding-inline-start: 0 !important;
   letter-spacing: 0.1rem;
   font-weight: 300;
   list-style: none;
-}
-
-button {
-  background-color: black !important;
-  border: none !important;
-  color: white !important;
-  margin-top: 1rem !important;
-}
-
-.title {
-  text-align: center;
-  font-size: 5rem;
 }
 
 .navbar {
@@ -90,93 +78,73 @@ button {
   margin: 0 10%;
 }
 
-/* Container Home */
+/*  */
 
-.containerHome {
+.mainContent {
+  text-align: center;
+  margin: auto;
+  color: black;
+}
+
+.mainContent p {
+  margin: auto;
+  width: 40%;
+  font-family: Arial, Helvetica, sans-serif !important;
+  margin-top: 2rem;
+}
+
+/* MAIN */
+
+.bigContainerCard {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 4rem 0;
+  padding: 0 2rem;
+}
+
+.card {
   position: relative;
-  width: 100vw;
-  height: 70vh;
-  background-color: pink;
-  background-image: url("../assets/bk1.jpg");
+  width: 400px;
+  height: 400px;
+  border-radius: 10px !important;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 2rem;
+  border: none !important;
+  background-color: none;
+  margin-bottom: 1rem;
 }
 
-.containerHome .mask {
+.card.sirene {
+  background-image: url("../assets/product1.png");
+}
+.card.mickey {
+  background-image: url("../assets/product2.png");
+}
+.card.lion {
+  background-image: url("../assets/product3.png");
+}
+
+.containerText {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  padding-bottom: 1rem;
+  text-align: center;
+}
+
+.card .mask {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: black;
   opacity: 0.5;
+  border-radius: 10px;
 }
 
-.containerHome.sirene .containerText {
-  left: 10%;
-}
-
-.containerHome .containerText {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: absolute;
-  background-color: #4b4b4b;
-  padding: 2rem;
-  border-radius: 15px;
-  width: 400px;
-  height: 400px;
-}
-
-.containerHome .containerImage {
-  position: absolute;
-  right: 10%;
-}
-
-.containerHome .containerImage img {
-  width: 500px;
-}
-
-/*  */
-
-.containerHome.mickey {
-  background-image: url("../assets/bk2.jpg");
-}
-
-.containerHome.mickey .containerImage {
-  left: 10%;
-}
-/* .containerHome.mickey .containerImage img {
-  position: absolute;
-  z-index: 0;
-} */
-
-.containerHome.mickey .containerText {
-  right: 10%;
-  position: absolute;
-  z-index: 100;
-}
-
-/*  */
-
-.containerHome.lion {
-  background-image: url("../assets/bk3.jpg");
-}
-
-.containerHome.mickey .containerImage {
-  left: 10%;
-}
-.containerHome.lion .containerText {
-  left: 10%;
-}
-.containerHome.lion .containerImage {
-  bottom: 0;
-}
-.containerHome.lion .containerImage img {
-  width: 400px;
-}
+/* MAIN */
 
 /* LEARN MORE */
 
@@ -198,6 +166,13 @@ ul :nth-child(2) {
 .containerSocial span {
   margin: auto;
   font-size: 0.7rem;
+}
+
+button {
+  background-color: black !important;
+  border: none !important;
+  color: white !important;
+  margin-top: 1rem !important;
 }
 
 @media only screen and (max-width: 520px) {
@@ -224,18 +199,29 @@ ul :nth-child(2) {
     background-color: #323131;
     margin-bottom: 1rem;
   }
+
+  .mainContent h1 {
+    font-size: 3rem !important;
+  }
+
+  .mainContent p {
+    width: 80%;
+  }
+
+  .bigContainerCard {
+    justify-content: center;
+  }
+
+  .card {
+    width: 300px;
+    height: 300px;
+  }
+
   button {
     font-size: 1rem !important;
     background-color: black !important;
     border: none !important;
     color: white !important;
     margin-top: 1rem !important;
-  }
-  .containerImage {
-    display: none;
-  }
-  .containerText {
-    width: 300px !important;
-    height: 300px !important;
   }
 }
