--- a/css/index.css
+++ b/css/index.css
@@ -195,9 +195,13 @@ ul :nth-child(2) {
   color: black !important;
 }
 
+.containerSocial li {
+  padding: 0 1rem;
+}
+
 .containerSocial span {
   margin: auto;
-  font-size: 0.7rem;
+  font-size: 1rem;
 }
 
 @media only screen and (max-width: 520px) {
