--- a/css/licence.css
+++ b/css/licence.css
@@ -160,7 +160,11 @@ ul :nth-child(2) {
 
 .containerSocial span {
   margin: auto;
-  font-size: 0.7rem;
+  font-size: 1rem;
+}
+
+.containerSocial li {
+  padding: 0 1rem;
 }
 
 @media only screen and (max-width: 520px) {
